[gd_scene load_steps=5 format=3 uid="uid://bahgi7ail7unc"]

[ext_resource type="Script" uid="uid://tfnj2g3f6jvg" path="res://main.gd" id="1_ig7tw"]
[ext_resource type="Script" uid="uid://ceisuqvgftdu4" path="res://kmk/client.gd" id="2_lquwl"]
[ext_resource type="Script" uid="uid://dhn2xf8tuf6ow" path="res://kmk/ui/keepWindow/tab_keep.gd" id="3_7mycd"]
[ext_resource type="Script" uid="uid://c66tdwxbhbwsy" path="res://kmk/ui/availableAreas/tab_available.gd" id="4_7mycd"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ig7tw")

[node name="Client" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_lquwl")

[node name="Selector" type="HBoxContainer" parent="Client"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.09259259
grow_horizontal = 2
grow_vertical = 2
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="BtMain" type="Button" parent="Client/Selector"]
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
disabled = true
text = "Archipelago"

[node name="BtHint" type="Button" parent="Client/Selector"]
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
disabled = true
text = "Hints"

[node name="BtKeep" type="Button" parent="Client/Selector"]
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
text = "Keymaster's Keep"

[node name="BtAvailable" type="Button" parent="Client/Selector"]
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
text = "Available Trials"

[node name="BtCompleted" type="Button" parent="Client/Selector"]
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
disabled = true
text = "Completed Trials"

[node name="BtShop" type="Button" parent="Client/Selector"]
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
disabled = true
text = "Shops"

[node name="Tabs" type="Control" parent="Client"]
layout_mode = 1
anchor_top = 0.09259259
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="TabKeep" type="Control" parent="Client/Tabs"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_7mycd")
metadata/_edit_group_ = true

[node name="Scroll" type="ScrollContainer" parent="Client/Tabs/TabKeep"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.013020833
anchor_right = 0.7074653
anchor_bottom = 1.0
offset_left = -7.0
offset_right = 1.0
horizontal_scroll_mode = 0
vertical_scroll_mode = 2
metadata/_edit_use_anchors_ = true

[node name="List" type="VBoxContainer" parent="Client/Tabs/TabKeep/Scroll"]
layout_mode = 2

[node name="TabAvailable" type="Control" parent="Client/Tabs"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_7mycd")
metadata/_edit_group_ = true

[node name="Scroll" type="ScrollContainer" parent="Client/Tabs/TabAvailable"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="List" type="VBoxContainer" parent="Client/Tabs/TabAvailable/Scroll"]
custom_minimum_size = Vector2(750, 0)
layout_mode = 2

[node name="Connection" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="WindowConnection" type="VBoxContainer" parent="Connection"]
layout_mode = 0
offset_right = 72.0
offset_bottom = 206.0

[node name="LineditIP" type="LineEdit" parent="Connection/WindowConnection"]
layout_mode = 2
text = "localhost"
placeholder_text = "IP"

[node name="LineditPORT" type="LineEdit" parent="Connection/WindowConnection"]
layout_mode = 2
text = "38281"
placeholder_text = "PORT"

[node name="LineditSLOT" type="LineEdit" parent="Connection/WindowConnection"]
layout_mode = 2
text = "Player1"
placeholder_text = "Slot"

[node name="BtConnect" type="Button" parent="Connection/WindowConnection"]
layout_mode = 2
text = "Connect"

[node name="BtExec" type="Button" parent="Connection/WindowConnection"]
layout_mode = 2
text = "Exec"

[node name="BtTest" type="Button" parent="Connection/WindowConnection"]
layout_mode = 2
text = "Test"

[connection signal="pressed" from="Connection/WindowConnection/BtConnect" to="." method="_on_bt_connect_pressed"]
[connection signal="pressed" from="Connection/WindowConnection/BtExec" to="." method="_on_bt_exec_pressed"]
[connection signal="pressed" from="Connection/WindowConnection/BtTest" to="." method="_on_bt_test_pressed"]
